--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-profile",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -8,6 +8,16 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "build:browser:prod": "ng build --prod",
+    "build:browser:serverless": "ng build --prod --base-href /production/",
+    "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
+    "build:prod": "npm run build:browser:prod && npm run build:server:prod",
+    "server": "node local.js",
+    "build:prod:deploy": "npm run build:prod && npm run deploy",
+    "build:serverless:deploy": "npm run build:serverless && npm run deploy",
+    "deploy": "serverless deploy",
+    "build:server:prod": "webpack --config webpack.server.config.js --progress --colors",
+    "build:server:serverless": "webpack --config webpack.server.config.js --progress --colors",
     "postinstall": "ng build --aot --prod"
   },
   "private": true,
@@ -20,9 +30,15 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ng-toolkit/serverless": "^7.1.2",
+    "aws-serverless-express": "^3.2.0",
+    "cors": "~2.8.4",
+    "cp-cli": "^1.1.0",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "webpack-dev-server": "^3.7.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -41,13 +57,18 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "opencollective": "^1.0.3",
     "protractor": "~5.4.0",
+    "serverless": "1.40.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "ts-loader": "4.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "webpack-cli": "^3.1.1"
   },
   "engines": {
-    "node":"~10.15.3",
-    "npm":"~6.4.1"
+    "node": "~10.15.3",
+    "npm": "~6.4.1"
   }
 }
